fixed spacing

--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -16,7 +16,7 @@
 
 .logo {
   font-size: 20px; /* Taille du logo */
-  color: antiquewhite;
+  color: rgb(255, 255, 255);
   position: absolute; /* Positionne le logo indépendamment */
   left: 20px; /* Le colle à gauche avec un espace */
   cursor: pointer;
@@ -33,7 +33,7 @@
 }
 
 .header-container h1 {
-  color: antiquewhite;
+  color: rgb(255, 255, 255);
   margin: 10px 25px;
   padding: 5px;
   font-size: 24px;
